# genai-agentos

./: .env-example  CLAUDE.md  README.md  docker-compose.yml
cli/: cli.py
cli/agents/test/: test.py
mcp-google-notion-server/: .env-example  .env.example  ANALYSIS_SUMMARY.md  Dockerfile  README.md  config-genai-agentos.json  example_usage.py  main.py  pyproject.toml  start-genai-agentos.sh  test_server_basic.py
mcp-google-notion-server/src/: __init__.py  config.py
mcp-google-notion-server/src/protocol/: __init__.py  handler.py  messages.py  server.py
mcp-google-notion-server/src/tools/: __init__.py  base.py  google_tools.py  notion_tools.py
mcp-google-notion-server/src/transport/: __init__.py  base.py  http.py  stdio.py  websocket.py
mcp-google-notion-server/tests/: __init__.py  test_tools.py
